--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <h2 class="util-title wow fadeInUp">Concept</h2>
               <div class="concept-inner">
                   <div class="concept-picture wow fadeInUp">
-                      <img src="img/concept-1.png">
+                      <img src="https://github.com/TKNRi/sobolon/blob/main/concept-1.png?raw=true">
                   </div>
                   <div class="concept-message wow fadeInUp">
                       <p class="concept-message-title">可愛くてステキなのは当たり前。<br>地球にやさしくあるのも当たり前。</p>
