--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sobolon - 海洋マイクロプラスチックを素材とした ハンドメイドアクセサリー</title>
     <meta name="description" content="サイトの概要文">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!--reset css-->
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="reset.css">
     <!--fontawesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <!-- drawer.css -->
@@ -19,10 +19,10 @@
     <!-- drawer.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
     <!--wow-->
-    <script src="/js/wow.min.js"></script>
-    <link rel="stylesheet" href="/css/animate.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    <script src="wow.min.js"></script>
+    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body class="drawer drawer--right">
     <header id="js-header" class="header inner_hd">
@@ -67,7 +67,7 @@
               <h2 class="util-title wow fadeInUp">Concept</h2>
               <div class="concept-inner">
                   <div class="concept-picture wow fadeInUp">
-                      <img src="https://github.com/TKNRi/sobolon/blob/main/concept-1.png?raw=true">
+                      <img src="concept-1.png">
                   </div>
                   <div class="concept-message wow fadeInUp">
                       <p class="concept-message-title">可愛くてステキなのは当たり前。<br>地球にやさしくあるのも当たり前。</p>
