--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <li class="feature-item wow fadeInUp">
                     <a href="#" class="feature-item-link">
                         <div class="feature-item-picture">
-                            <img src="/img/feature-1.png">
+                            <img src="feature-1.png">
                         </div>
                         <div class="feature-item-body">
                             <p class="feature-item-title">素材は海で採れた<br>マイクロプラスチック</p>
@@ -92,7 +92,7 @@
                 <li class="feature-item wow fadeInUp">
                     <a href="#" class="feature-item-link">
                         <div class="feature-item-picture">
-                            <img src="/img/feature-2.png">
+                            <img src="feature-2.png">
                         </div>
                         <div class="feature-item-body">
                             <p class="feature-item-title">個性あふれる<br>“可愛い”デザイン</p>
@@ -102,7 +102,7 @@
                 <li class="feature-item wow fadeInUp">
                     <a href="#" class="feature-item-link">
                         <div class="feature-item-picture">
-                            <img src="/img/feature-3.png">
+                            <img src="feature-3.png">
                         </div>
                         <div class="feature-item-body">
                             <p class="feature-item-title">世界にひとつだけの<br>一点物アクセサリー</p>
@@ -125,7 +125,7 @@
                 <li class="products-item">
                     <a href="#" class="products-item-link">
                         <div class="products-item-picture">
-                            <img src="/img/product-1.png">
+                            <img src="product-1.png">
                         </div>
                         <div class="products-item-body">
                             <p class="products-item-title">【しかくイヤリング】海洋マイクロプラスチックを使ったハンドメイドイヤリング(全7色)</p>
@@ -136,7 +136,7 @@
                 <li class="products-item wow fadeInUp">
                     <a href="#" class="products-item-link">
                         <div class="products-item-picture">
-                            <img src="/img/product-2.png">
+                            <img src="product-2.png">
                         </div>
                         <div class="products-item-body">
                             <p class="products-item-title">【しかく指輪】海洋マイクロプラスチックを使ったハンドメイドアクセサリー/ゆびわ(全7色)</p>
@@ -147,7 +147,7 @@
                 <li class="products-item wow fadeInUp">
                     <a href="#" class="products-item-link">
                         <div class="products-item-picture">
-                            <img src="/img/product-3.png">
+                            <img src="product-3.png">
                         </div>
                         <div class="products-item-body">
                             <p class="products-item-title">【ピンバッジ】海洋マイクロプラスチックを使ったsobolonオリジナルピンバッジ(全6色)</p>
@@ -168,7 +168,7 @@
                     <a href="#" class="news-item-link">
                         <div class="news-item-header">
                             <div class="news-item-picture">
-                                <img src="/img/news-1.png" alt="">
+                                <img src="news-1.png" alt="">
                             </div>
                         </div>
                         <div class="news-item-body">
@@ -182,7 +182,7 @@
                     <a href="#" class="news-item-link">
                         <div class="news-item-header">
                             <div class="news-item-picture">
-                                <img src="/img/news-2.png" alt="">
+                                <img src="news-2.png" alt="">
                             </div>
                         </div>
                         <div class="news-item-body">
@@ -196,7 +196,7 @@
                     <a href="#" class="news-item-link">
                         <div class="news-item-header">
                             <div class="news-item-picture">
-                                <img src="/img/news-3.png" alt="">
+                                <img src="news-3.png" alt="">
                             </div>
                         </div>
                         <div class="news-item-body">
@@ -215,7 +215,7 @@
           <div class="concept2 inner section">
             <div class="concept2-inner">
                 <div class="concept2-picture wow fadeInUp">
-                    <img src="img/concept-2.png">
+                    <img src="concept-2.png">
                 </div>
                 <div class="concept2-message wow fadeInUp">
                     <p class="concept2-message-title">合言葉は、<br>「 “可愛い” で 地球を守る！」</p>
