--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       </main>
 
       <footer class="footer">
-          <div class="footer-logo"><img src="/img/logo.png" alt="sobolon"></div>
+          <div class="footer-logo"><img src="logo.png" alt="sobolon"></div>
           <ul class="footer-nav-list">
               <li class="footer-nav-item">
                   <a href="#" class="footer-nav-item-link">プライバシーポリシー</a>
